[package]
name = "neoh"
version = "0.1.5"
authors = ["stefand-0"]
edition = "2021"
description = "A declarative HDL transpiler for rapid testbench development."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/stefand-0/neoh"

[[bin]]
name = "neoh"
path = "src/main.rs"

[dependencies]
# Pest and owo
pest = "2.7"
pest_derive = "2.7"
owo-colors = "4.0" 
 
